--- a/lang/bn.json
+++ b/lang/bn.json
@@ -772,6 +772,7 @@
   "Register": "নিবন্ধন",
   "Register a new key": "একটি নতুন কী নিবন্ধন করুন",
   "Register a new key.": "একটি নতুন কী নিবন্ধন করুন।",
+  "Registration is currently disabled": "নিবন্ধকরণ বর্তমানে অক্ষম",
   "Regular post": "নিয়মিত পোস্ট",
   "Regular user": "নিয়মিত ব্যবহারকারী",
   "Relationships": "সম্পর্ক",
