--- a/lang/de.json
+++ b/lang/de.json
@@ -772,6 +772,7 @@
   "Register": "Registrieren",
   "Register a new key": "Registrieren Sie einen neuen Schlüssel",
   "Register a new key.": "Registrieren Sie einen neuen Schlüssel.",
+  "Registration is currently disabled": "Die Registrierung ist derzeit deaktiviert",
   "Regular post": "Regelmäßige Post",
   "Regular user": "Regelmäßiger Benutzer",
   "Relationships": "Beziehungen",
