--- a/lang/el.json
+++ b/lang/el.json
@@ -772,6 +772,7 @@
   "Register": "Εγγραφή",
   "Register a new key": "Καταχωρίστε ένα νέο κλειδί",
   "Register a new key.": "Καταχωρίστε ένα νέο κλειδί.",
+  "Registration is currently disabled": "Η εγγραφή είναι επί του παρόντος απενεργοποιημένη",
   "Regular post": "Κανονική ανάρτηση",
   "Regular user": "Τακτικός χρήστης",
   "Relationships": "Σχέσεις",
