--- a/lang/es.json
+++ b/lang/es.json
@@ -772,6 +772,7 @@
   "Register": "Registrarse",
   "Register a new key": "Registrar una nueva clave",
   "Register a new key.": "Registre una nueva clave.",
+  "Registration is currently disabled": "El registro está actualmente deshabilitado",
   "Regular post": "Correo ordinario",
   "Regular user": "Usuario regular",
   "Relationships": "Relaciones",
