--- a/lang/it.json
+++ b/lang/it.json
@@ -772,6 +772,7 @@
   "Register": "Registrati",
   "Register a new key": "Registra una nuova chiave",
   "Register a new key.": "Registra una nuova chiave.",
+  "Registration is currently disabled": "La registrazione è attualmente disabilitata",
   "Regular post": "Posta regolare",
   "Regular user": "Utente abituale",
   "Relationships": "Relazioni",
