--- a/lang/ml.json
+++ b/lang/ml.json
@@ -773,6 +773,7 @@
   "Register": "രജിസ്റ്റർ ചെയ്യുക",
   "Register a new key": "ഒരു പുതിയ കീ രജിസ്റ്റർ ചെയ്യുക",
   "Register a new key.": "ഒരു പുതിയ കീ രജിസ്റ്റർ ചെയ്യുക.",
+  "Registration is currently disabled": "രജിസ്ട്രേഷൻ നിലവിൽ അപ്രാപ്തമാക്കി",
   "Regular post": "പതിവ് പോസ്റ്റ്",
   "Regular user": "സ്ഥിരം ഉപയോക്താവ്",
   "Relationships": "ബന്ധങ്ങൾ",
