--- a/lang/nl.json
+++ b/lang/nl.json
@@ -772,6 +772,7 @@
   "Register": "Registreren",
   "Register a new key": "Registreer een nieuwe sleutel",
   "Register a new key.": "Registreer een nieuwe sleutel.",
+  "Registration is currently disabled": "Registratie is momenteel uitgeschakeld",
   "Regular post": "Reguliere post",
   "Regular user": "Regelmatige gebruiker",
   "Relationships": "Relaties",
