--- a/lang/nn.json
+++ b/lang/nn.json
@@ -772,6 +772,7 @@
   "Register": "Registrer",
   "Register a new key": "Registrer en ny nøkkel",
   "Register a new key.": "Registrer en ny nøkkel.",
+  "Registration is currently disabled": "Registrering er for øyeblikket deaktivert",
   "Regular post": "Vanlig innlegg",
   "Regular user": "Vanlig bruker",
   "Relationships": "Forhold",
