--- a/lang/pa.json
+++ b/lang/pa.json
@@ -773,6 +773,7 @@
   "Register": "ਰਜਿਸਟਰ",
   "Register a new key": "ਇੱਕ ਨਵੀਂ ਕੁੰਜੀ ਰਜਿਸਟਰ ਕਰੋ",
   "Register a new key.": "ਇੱਕ ਨਵੀਂ ਕੁੰਜੀ ਰਜਿਸਟਰ ਕਰੋ।",
+  "Registration is currently disabled": "ਇਸ ਸਮੇਂ ਰਜਿਸਟ੍ਰੇਸ਼ਨ ਅਯੋਗ ਹੈ",
   "Regular post": "ਨਿਯਮਤ ਪੋਸਟ",
   "Regular user": "ਨਿਯਮਤ ਉਪਭੋਗਤਾ",
   "Relationships": "ਰਿਸ਼ਤੇ",
