--- a/lang/pl.json
+++ b/lang/pl.json
@@ -772,6 +772,7 @@
   "Register": "Zarejestruj się",
   "Register a new key": "Zarejestruj nowy klucz",
   "Register a new key.": "Zarejestruj nowy klucz.",
+  "Registration is currently disabled": "Rejestracja jest obecnie wyłączona",
   "Regular post": "Etat",
   "Regular user": "Zwykły użytkownik",
   "Relationships": "Relacje",
