--- a/lang/ro.json
+++ b/lang/ro.json
@@ -772,6 +772,7 @@
   "Register": "Înregistrare",
   "Register a new key": "Înregistrați o cheie nouă",
   "Register a new key.": "Înregistrați o cheie nouă.",
+  "Registration is currently disabled": "Înregistrarea este în prezent dezactivată",
   "Regular post": "Postare obișnuită",
   "Regular user": "Utilizator obișnuit",
   "Relationships": "Relații",
