--- a/lang/sv.json
+++ b/lang/sv.json
@@ -772,6 +772,7 @@
   "Register": "Registrera",
   "Register a new key": "Registrera en ny nyckel",
   "Register a new key.": "Registrera en ny nyckel.",
+  "Registration is currently disabled": "Registrering är för närvarande inaktiverad",
   "Regular post": "Vanligt inlägg",
   "Regular user": "Vanlig användare",
   "Relationships": "Relationer",
