--- a/lang/te.json
+++ b/lang/te.json
@@ -773,6 +773,7 @@
   "Register": "నమోదు చేసుకోండి",
   "Register a new key": "కొత్త కీని నమోదు చేయండి",
   "Register a new key.": "కొత్త కీని నమోదు చేయండి.",
+  "Registration is currently disabled": "రిజిస్ట్రేషన్ ప్రస్తుతం నిలిపివేయబడింది",
   "Regular post": "రెగ్యులర్ పోస్ట్",
   "Regular user": "సాధారణ వినియోగదారు",
   "Relationships": "సంబంధాలు",
