--- a/lang/vi.json
+++ b/lang/vi.json
@@ -772,6 +772,7 @@
   "Register": "Đăng ký",
   "Register a new key": "Đăng ký khóa mới",
   "Register a new key.": "Đăng ký một chìa khóa mới.",
+  "Registration is currently disabled": "Đăng ký hiện đang bị vô hiệu hóa",
   "Regular post": "Bài đăng thường xuyên",
   "Regular user": "Người sử dụng thường xuyên",
   "Relationships": "Các mối quan hệ",
