--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -772,6 +772,7 @@
   "Register": "注册",
   "Register a new key": "注册新密钥",
   "Register a new key.": "注册新密钥。",
+  "Registration is currently disabled": "注册当前已禁用",
   "Regular post": "常规帖子",
   "Regular user": "普通用户",
   "Relationships": "人际关系",
