--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -772,6 +772,7 @@
   "Register": "註冊",
   "Register a new key": "註冊新密鑰",
   "Register a new key.": "註冊新密鑰。",
+  "Registration is currently disabled": "註冊當前已禁用",
   "Regular post": "常規貼文",
   "Regular user": "普通用戶",
   "Relationships": "人際關係",
