--- a/lang/ar.json
+++ b/lang/ar.json
@@ -772,6 +772,7 @@
   "Register": "تسجيل",
   "Register a new key": "تسجيل مفتاح جديد",
   "Register a new key.": "تسجيل مفتاح جديد.",
+  "Registration is currently disabled": "التسجيل معاق حاليا",
   "Regular post": "البريد العادي",
   "Regular user": "المستخدم العادي",
   "Relationships": "العلاقات",
