feat: add address type type

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -390,6 +390,7 @@
   "Edit a contact": "تحرير جهة اتصال",
   "Edit a journal": "تحرير مجلة",
   "Edit a post": "تحرير مشاركة",
+  "Edit a vault": "تحرير قبو",
   "edited a note": "تحرير ملاحظة",
   "Edit group": "تحرير المجموعة",
   "Edit journal": "تحرير المجلة",
@@ -578,8 +579,8 @@
   "Log in": "تسجيل الدخول",
   "Login": "تسجيل الدخول",
   "Login with:": "تسجيل الدخول مع:",
-  "Logout": "تسجيل الخروج",
   "Log Out": "تسجيل الخروج",
+  "Logout": "تسجيل الخروج",
   "Log Out Other Browser Sessions": "تسجيل الخروج من جلساتك على المتصفحات الأخرى",
   "Longest streak": "أطول أثر",
   "Love": "حب",
@@ -820,6 +821,7 @@
   "Security keys": "مفاتيح الأمان",
   "Select a group or create a new one": "حدد مجموعة أو أنشئ مجموعة جديدة",
   "Select A New Photo": "اختيار صورة جديدة",
+  "Select a page": "حدد صفحة",
   "Select a relationship type": "حدد نوع العلاقة",
   "Send invitation": "إرسال دعوة",
   "Send test": "إرسال الاختبار",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "تم تحديث المستخدم",
   "The vault has been created": "تم إنشاء القبو",
   "The vault has been deleted": "تم حذف الخزنة",
-  "The vault have been updated": "تم تحديث القبو",
+  "The vault has been updated": "تم تحديث قبو",
   "they/them": "هم / لهم",
   "This address is not active anymore": "هذا العنوان لم يعد نشطا بعد الآن",
   "This device": "هذا الجهاز",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "لقد تمت دعوتك لاستخدام عنوان البريد الإلكتروني هذا في Monica، وهو نظام إدارة علاقات العملاء (CRM) شخصي مفتوح المصدر، حتى نتمكن من استخدامه لإرسال إشعارات إليك.",
   "ze/hir": "زي / هير",
   "⚠️ Danger zone": "⚠️منطقة الخطر",
+  "❔ Other": "❔ آخر",
   "🌳 Chalet": "🌳شاليه",
   "🏠 Secondary residence": "🏠 الإقامة الثانوية",
   "🏡 Home": "🏡 المنزل",
