--- a/lang/ca.json
+++ b/lang/ca.json
@@ -390,6 +390,7 @@
   "Edit a contact": "Edita un contacte",
   "Edit a journal": "Edita un diari",
   "Edit a post": "Edita una publicació",
+  "Edit a vault": "Edita una volta",
   "edited a note": "editat una nota",
   "Edit group": "Edita el grup",
   "Edit journal": "Edita el diari",
@@ -578,8 +579,8 @@
   "Log in": "Entrar",
   "Login": "Entrar",
   "Login with:": "Accedir amb:",
-  "Logout": "Sortir",
   "Log Out": "Sortir",
+  "Logout": "Sortir",
   "Log Out Other Browser Sessions": "Tanca la sessió d’altres navegadors",
   "Longest streak": "Ratxa més llarga",
   "Love": "Amor",
@@ -820,6 +821,7 @@
   "Security keys": "Claus de seguretat",
   "Select a group or create a new one": "Seleccioneu un grup o creeu-ne un de nou",
   "Select A New Photo": "Seleccioneu Una Foto Nova",
+  "Select a page": "Seleccioneu una pàgina",
   "Select a relationship type": "Seleccioneu un tipus de relació",
   "Send invitation": "Enviar invitació",
   "Send test": "Envia prova",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "L’usuari ha estat actualitzat",
   "The vault has been created": "S’ha creat la volta",
   "The vault has been deleted": "S’ha suprimit la volta",
-  "The vault have been updated": "La volta s’ha actualitzat",
+  "The vault has been updated": "La volta s’ha actualitzat",
   "they/them": "ells/elles",
   "This address is not active anymore": "Aquesta adreça ja no està activa",
   "This device": "Aquest dispositiu",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Us han convidat a utilitzar aquesta adreça de correu electrònic a Monica, un CRM personal de codi obert, perquè puguem utilitzar-lo per enviar-vos notificacions.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ Zona de perill",
+  "❔ Other": "❔ Altres",
   "🌳 Chalet": "🌳 Xalet",
   "🏠 Secondary residence": "🏠 Residència secundària",
   "🏡 Home": "🏡 A casa",
