--- a/lang/he.json
+++ b/lang/he.json
@@ -390,6 +390,7 @@
   "Edit a contact": "ערוך איש קשר",
   "Edit a journal": "ערוך יומן",
   "Edit a post": "ערוך פוסט",
+  "Edit a vault": "ערוך קמרון",
   "edited a note": "ערך הערה",
   "Edit group": "ערוך קבוצה",
   "Edit journal": "ערוך יומן",
@@ -578,8 +579,8 @@
   "Log in": "התחבר",
   "Login": "התחברות",
   "Login with:": "התחבר עם:",
-  "Logout": "התנתקות",
   "Log Out": "התנתק",
+  "Logout": "התנתקות",
   "Log Out Other Browser Sessions": "להתנתק הפעלות דפדפן אחרות",
   "Longest streak": "הרצף הארוך ביותר",
   "Love": "אהבה",
@@ -820,6 +821,7 @@
   "Security keys": "מפתחות אבטחה",
   "Select a group or create a new one": "בחר קבוצה או צור קבוצה חדשה",
   "Select A New Photo": "בחר תמונה חדשה",
+  "Select a page": "בחר דף",
   "Select a relationship type": "בחר סוג קשר",
   "Send invitation": "שלח הזמנה",
   "Send test": "שלח מבחן",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "המשתמש עודכן",
   "The vault has been created": "הכספת נוצרה",
   "The vault has been deleted": "הכספת נמחקה",
-  "The vault have been updated": "הכספת עודכנה",
+  "The vault has been updated": "הכספת עודכנה",
   "they/them": "הם/הם",
   "This address is not active anymore": "כתובת זו אינה פעילה יותר",
   "This device": "התקן זה",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "הוזמנת להשתמש בכתובת האימייל הזו ב- Monica, קוד פתוח ב-CRM אישי, כדי שנוכל להשתמש בה כדי לשלוח לך התראות.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ אזור סכנה",
+  "❔ Other": "❔ אחרים",
   "🌳 Chalet": "🌳 בקתה",
   "🏠 Secondary residence": "🏠 מגורים משני",
   "🏡 Home": "🏡 הבית",
