--- a/lang/it.json
+++ b/lang/it.json
@@ -390,6 +390,7 @@
   "Edit a contact": "Modifica un contatto",
   "Edit a journal": "Modifica un diario",
   "Edit a post": "Modifica un post",
+  "Edit a vault": "Modifica un Vault",
   "edited a note": "modificato una nota",
   "Edit group": "Modifica gruppo",
   "Edit journal": "Modifica diario",
@@ -578,8 +579,8 @@
   "Log in": "Accedi",
   "Login": "Accedi",
   "Login with:": "Entra con:",
-  "Logout": "Esci",
   "Log Out": "Esci",
+  "Logout": "Esci",
   "Log Out Other Browser Sessions": "Esci da altre sessioni del Browser",
   "Longest streak": "Serie più lunga",
   "Love": "Amore",
@@ -820,6 +821,7 @@
   "Security keys": "Chiavi di sicurezza",
   "Select a group or create a new one": "Seleziona un gruppo o creane uno nuovo",
   "Select A New Photo": "Seleziona una nuova foto",
+  "Select a page": "Seleziona una pagina",
   "Select a relationship type": "Seleziona un tipo di relazione",
   "Send invitation": "Spedire un invito",
   "Send test": "Invia prova",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "L’utente è stato aggiornato",
   "The vault has been created": "Il caveau è stato creato",
   "The vault has been deleted": "Il deposito è stato eliminato",
-  "The vault have been updated": "Il vault è stato aggiornato",
+  "The vault has been updated": "Il Vault è stato aggiornato",
   "they/them": "loro/loro",
   "This address is not active anymore": "Questo indirizzo non è più attivo",
   "This device": "Questo dispositivo",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Sei stato invitato a utilizzare questo indirizzo email in Monica, un CRM personale open source, così possiamo usarlo per inviarti notifiche.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ Zona pericolosa",
+  "❔ Other": "❔ Altro",
   "🌳 Chalet": "🌳Chalet",
   "🏠 Secondary residence": "🏠 Residenza secondaria",
   "🏡 Home": "🏡 Casa",
