--- a/lang/pt.json
+++ b/lang/pt.json
@@ -390,6 +390,7 @@
   "Edit a contact": "Editar um contato",
   "Edit a journal": "Editar um diário",
   "Edit a post": "Editar uma postagem",
+  "Edit a vault": "Edite um cofre",
   "edited a note": "editou uma nota",
   "Edit group": "Editar grupo",
   "Edit journal": "Editar diário",
@@ -578,8 +579,8 @@
   "Log in": "Iniciar sessão",
   "Login": "Iniciar Sessão",
   "Login with:": "Faça login com:",
-  "Logout": "Terminar Sessão",
   "Log Out": "Terminar Sessão",
+  "Logout": "Terminar Sessão",
   "Log Out Other Browser Sessions": "Terminar Outras Sessões de Navegador",
   "Longest streak": "Sequência mais longa",
   "Love": "Amor",
@@ -820,6 +821,7 @@
   "Security keys": "Chaves de segurança",
   "Select a group or create a new one": "Selecione um grupo ou crie um novo",
   "Select A New Photo": "Selecionar uma nova Foto",
+  "Select a page": "Selecione uma página",
   "Select a relationship type": "Selecione um tipo de relacionamento",
   "Send invitation": "Enviar convite",
   "Send test": "Enviar teste",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "O usuário foi atualizado",
   "The vault has been created": "O cofre foi criado",
   "The vault has been deleted": "O cofre foi excluído",
-  "The vault have been updated": "O cofre foi atualizado",
+  "The vault has been updated": "O cofre foi atualizado",
   "they/them": "eles/eles",
   "This address is not active anymore": "Este endereço não está mais ativo",
   "This device": "Este dispositivo",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Você foi convidado a usar este endereço de e-mail no Monica, um CRM pessoal de código aberto, para que possamos usá-lo para enviar notificações.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ Zona de perigo",
+  "❔ Other": "❔ Outro",
   "🌳 Chalet": "🌳 Chalé",
   "🏠 Secondary residence": "🏠 Residência secundária",
   "🏡 Home": "🏡 Casa",
