--- a/lang/te.json
+++ b/lang/te.json
@@ -390,6 +390,7 @@
   "Edit a contact": "పరిచయాన్ని సవరించండి",
   "Edit a journal": "పత్రికను సవరించండి",
   "Edit a post": "పోస్ట్‌ను సవరించండి",
+  "Edit a vault": "ఒక ఖజానాను సవరించండి",
   "edited a note": "ఒక గమనికను సవరించారు",
   "Edit group": "సమూహాన్ని సవరించండి",
   "Edit journal": "పత్రికను సవరించండి",
@@ -579,8 +580,8 @@
   "Log in": "ప్రవేశించండి",
   "Login": "ప్రవేశించండి",
   "Login with:": "తో లాగిన్ అవ్వండి:",
-  "Logout": "లాగ్అవుట్",
   "Log Out": "లాగ్ అవుట్ చేయండి",
+  "Logout": "లాగ్అవుట్",
   "Log Out Other Browser Sessions": "ఇతర బ్రౌజర్ సెషన్‌లను లాగ్ అవుట్ చేయండి",
   "Longest streak": "పొడవైన గీత",
   "Love": "ప్రేమ",
@@ -821,6 +822,7 @@
   "Security keys": "భద్రతా కీలు",
   "Select a group or create a new one": "సమూహాన్ని ఎంచుకోండి లేదా కొత్తదాన్ని సృష్టించండి",
   "Select A New Photo": "కొత్త ఫోటోను ఎంచుకోండి",
+  "Select a page": "ఒక పేజీని ఎంచుకోండి",
   "Select a relationship type": "సంబంధం రకాన్ని ఎంచుకోండి",
   "Send invitation": "ఆహ్వానం పంపండి",
   "Send test": "పరీక్ష పంపండి",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "వినియోగదారు నవీకరించబడ్డారు",
   "The vault has been created": "ఖజానా సృష్టించబడింది",
   "The vault has been deleted": "ఖజానా తొలగించబడింది",
-  "The vault have been updated": "ఖజానా నవీకరించబడింది",
+  "The vault has been updated": "ఖజానా నవీకరించబడింది",
   "they/them": "వారు/వారు",
   "This address is not active anymore": "ఈ చిరునామా ఇప్పుడు సక్రియంగా లేదు",
   "This device": "ఈ పరికరం",
@@ -1271,6 +1273,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "ఓపెన్ సోర్స్ వ్యక్తిగత CRM అయిన Monica ఈ ఇమెయిల్ చిరునామాను ఉపయోగించడానికి మీరు ఆహ్వానించబడ్డారు, కాబట్టి మేము మీకు నోటిఫికేషన్‌లను పంపడానికి దీన్ని ఉపయోగించవచ్చు.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ డేంజర్ జోన్",
+  "❔ Other": "❔ ఇతర",
   "🌳 Chalet": "🌳 చాలెట్",
   "🏠 Secondary residence": "🏠 ద్వితీయ నివాసం",
   "🏡 Home": "🏡 ఇల్లు",
