--- a/lang/tr.json
+++ b/lang/tr.json
@@ -390,6 +390,7 @@
   "Edit a contact": "Kişiyi düzenleme",
   "Edit a journal": "Günlüğü düzenleme",
   "Edit a post": "Bir yayını düzenleme",
+  "Edit a vault": "Bir Kasa Düzenle",
   "edited a note": "bir notu düzenledim",
   "Edit group": "Grubu düzenle",
   "Edit journal": "Günlüğü düzenle",
@@ -578,8 +579,8 @@
   "Log in": "Giriş yap",
   "Login": "Giriş Yap",
   "Login with:": "İle giriş:",
-  "Logout": "Çıkış Yap",
   "Log Out": "Çıkış Yap",
+  "Logout": "Çıkış Yap",
   "Log Out Other Browser Sessions": "Diğer Tarayıcılardaki Oturumları Sonlandır",
   "Longest streak": "En uzun seri",
   "Love": "Aşk",
@@ -820,6 +821,7 @@
   "Security keys": "Güvenlik anahtarları",
   "Select a group or create a new one": "Bir grup seçin veya yeni bir tane oluşturun",
   "Select A New Photo": "Yeni Bir Fotoğraf Seçin",
+  "Select a page": "Bir Sayfa Seçin",
   "Select a relationship type": "Bir ilişki türü seçin",
   "Send invitation": "Davetiye gönder",
   "Send test": "Testi gönder",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "Kullanıcı güncellendi",
   "The vault has been created": "Kasa oluşturuldu",
   "The vault has been deleted": "Kasa silindi",
-  "The vault have been updated": "Kasa güncellendi",
+  "The vault has been updated": "Kasa güncellendi",
   "they/them": "onlar / onlar",
   "This address is not active anymore": "Bu adres artık aktif değil",
   "This device": "Bu cihaz",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Bu e-posta adresini açık kaynaklı bir kişisel CRM olan Monica’da kullanmaya davet edildiniz, böylece size bildirim göndermek için kullanabiliriz.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ Tehlikeli bölge",
+  "❔ Other": "❔ Diğer",
   "🌳 Chalet": "🌳 Dağ evi",
   "🏠 Secondary residence": "🏠 İkincil ikamet",
   "🏡 Home": "🏡 Ana Sayfa",
