--- a/lang/ur.json
+++ b/lang/ur.json
@@ -390,6 +390,7 @@
   "Edit a contact": "رابطے میں ترمیم کریں۔",
   "Edit a journal": "ایک جریدے میں ترمیم کریں۔",
   "Edit a post": "ایک پوسٹ میں ترمیم کریں۔",
+  "Edit a vault": "ایک والٹ میں ترمیم کریں",
   "edited a note": "ایک نوٹ میں ترمیم کی",
   "Edit group": "گروپ میں ترمیم کریں۔",
   "Edit journal": "جریدے میں ترمیم کریں۔",
@@ -578,8 +579,8 @@
   "Log in": "میں لاگ ان کریں",
   "Login": "لاگ ان کریں",
   "Login with:": "کے ساتھ لاگ ان:",
-  "Logout": "لاگ آوٹ",
   "Log Out": "باہر لاگ ان کریں",
+  "Logout": "لاگ آوٹ",
   "Log Out Other Browser Sessions": "لاگ آؤٹ دیگر براؤزر سیشن",
   "Longest streak": "سب سے طویل سلسلہ",
   "Love": "محبت",
@@ -820,6 +821,7 @@
   "Security keys": "سیکیورٹی کیز",
   "Select a group or create a new one": "ایک گروپ منتخب کریں یا ایک نیا بنائیں",
   "Select A New Photo": "ایک نئی تصویر کو منتخب کریں",
+  "Select a page": "ایک صفحہ منتخب کریں",
   "Select a relationship type": "رشتے کی قسم منتخب کریں۔",
   "Send invitation": "دعوت نامہ بھیج دیں",
   "Send test": "ٹیسٹ بھیجیں۔",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "صارف کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The vault has been created": "والٹ بنایا گیا ہے۔",
   "The vault has been deleted": "والٹ کو حذف کر دیا گیا ہے۔",
-  "The vault have been updated": "والٹ کو اپ ڈیٹ کر دیا گیا ہے۔",
+  "The vault has been updated": "والٹ کو اپ ڈیٹ کردیا گیا ہے",
   "they/them": "وہ/انہیں",
   "This address is not active anymore": "یہ پتہ اب فعال نہیں ہے۔",
   "This device": "یہ آلہ",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "آپ کو یہ ای میل ایڈریس Monica میں استعمال کرنے کے لیے مدعو کیا گیا ہے، جو ایک اوپن سورس ذاتی CRM ہے، لہذا ہم آپ کو اطلاعات بھیجنے کے لیے اس کا استعمال کر سکتے ہیں۔",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ خطرہ زون",
+  "❔ Other": "❔ دوسرے",
   "🌳 Chalet": "🌳 چیلیٹ",
   "🏠 Secondary residence": "🏠 ثانوی رہائش گاہ",
   "🏡 Home": "🏡 گھر",
