--- a/lang/vi.json
+++ b/lang/vi.json
@@ -390,6 +390,7 @@
   "Edit a contact": "Chỉnh sửa liên hệ",
   "Edit a journal": "Chỉnh sửa một tạp chí",
   "Edit a post": "Chỉnh sửa bài đăng",
+  "Edit a vault": "Chỉnh sửa một kho tiền",
   "edited a note": "đã chỉnh sửa một ghi chú",
   "Edit group": "Chỉnh sửa nhóm",
   "Edit journal": "Chỉnh sửa tạp chí",
@@ -578,8 +579,8 @@
   "Log in": "Đăng nhập",
   "Login": "Đăng nhập",
   "Login with:": "Đăng nhập với:",
-  "Logout": "Đăng xuất",
   "Log Out": "Đăng Xuất",
+  "Logout": "Đăng xuất",
   "Log Out Other Browser Sessions": "Đăng Xuất Khỏi Các Phiên Trình Duyệt Khác",
   "Longest streak": "Chuỗi dài nhất",
   "Love": "Yêu",
@@ -820,6 +821,7 @@
   "Security keys": "Khóa bảo mật",
   "Select a group or create a new one": "Chọn một nhóm hoặc tạo một nhóm mới",
   "Select A New Photo": "Chọn một ảnh mới",
+  "Select a page": "Chọn một trang",
   "Select a relationship type": "Chọn loại mối quan hệ",
   "Send invitation": "Gửi lời mời",
   "Send test": "Gửi bài kiểm tra",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "Người dùng đã được cập nhật",
   "The vault has been created": "Vault đã được tạo",
   "The vault has been deleted": "Kho tiền đã bị xóa",
-  "The vault have been updated": "Kho tiền đã được cập nhật",
+  "The vault has been updated": "Kho tiền đã được cập nhật",
   "they/them": "họ / họ",
   "This address is not active anymore": "Địa chỉ này không còn hoạt động nữa",
   "This device": "Thiết bị hiện tại",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Bạn đã được mời sử dụng địa chỉ email này ở Monica, một CRM cá nhân nguồn mở để chúng tôi có thể sử dụng địa chỉ này để gửi thông báo cho bạn.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ Vùng nguy hiểm",
+  "❔ Other": "❔ Khác",
   "🌳 Chalet": "🌳 Nhà gỗ",
   "🏠 Secondary residence": "🏠 Nơi ở thứ hai",
   "🏡 Home": "🏡 Trang chủ",
