--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -390,6 +390,7 @@
   "Edit a contact": "編輯聯絡人",
   "Edit a journal": "編輯日記",
   "Edit a post": "編輯貼文",
+  "Edit a vault": "編輯保險庫",
   "edited a note": "編輯了一則筆記",
   "Edit group": "編輯群組",
   "Edit journal": "編輯日記",
@@ -578,8 +579,8 @@
   "Log in": "登入",
   "Login": "登入",
   "Login with:": "登入方式：",
-  "Logout": "登出",
   "Log Out": "登出",
+  "Logout": "登出",
   "Log Out Other Browser Sessions": "登出其它瀏覽器工作階段",
   "Longest streak": "最長連續紀錄",
   "Love": "愛",
@@ -820,6 +821,7 @@
   "Security keys": "安全金鑰",
   "Select a group or create a new one": "選擇一個群組或建立一個新群組",
   "Select A New Photo": "選擇新的照片",
+  "Select a page": "選擇一個頁面",
   "Select a relationship type": "選擇關係類型",
   "Send invitation": "發送邀請",
   "Send test": "發送測試",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "使用者已更新",
   "The vault has been created": "保管庫已建立",
   "The vault has been deleted": "保管庫已刪除",
-  "The vault have been updated": "保險庫已更新",
+  "The vault has been updated": "保險庫已更新",
   "they/them": "他們/他們",
   "This address is not active anymore": "該地址不再有效",
   "This device": "目前裝置",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "您已被邀請在開源個人 CRM Monica 中使用此電子郵件地址，以便我們可以使用它向您發送通知。",
   "ze/hir": "澤/希爾",
   "⚠️ Danger zone": "⚠️危險地帶",
+  "❔ Other": "❔其他",
   "🌳 Chalet": "🌳 小木屋",
   "🏠 Secondary residence": "🏠 第二居所",
   "🏡 Home": "🏡 首頁",
