--- a/lang/nl.json
+++ b/lang/nl.json
@@ -390,6 +390,7 @@
   "Edit a contact": "Bewerk een contactpersoon",
   "Edit a journal": "Een dagboek bewerken",
   "Edit a post": "Bewerk een bericht",
+  "Edit a vault": "Bewerk een kluis",
   "edited a note": "een notitie aangepast",
   "Edit group": "Groep bewerken",
   "Edit journal": "Journaal bewerken",
@@ -578,8 +579,8 @@
   "Log in": "Inloggen",
   "Login": "Inloggen",
   "Login with:": "Login met:",
-  "Logout": "Uitloggen",
   "Log Out": "Uitloggen",
+  "Logout": "Uitloggen",
   "Log Out Other Browser Sessions": "Uitloggen bij alle sessies",
   "Longest streak": "Langste reeks",
   "Love": "Liefde",
@@ -820,6 +821,7 @@
   "Security keys": "Beveiligingssleutels",
   "Select a group or create a new one": "Selecteer een groep of maak een nieuwe aan",
   "Select A New Photo": "Selecteer Een Nieuwe Foto",
+  "Select a page": "Selecteer een pagina",
   "Select a relationship type": "Selecteer een relatietype",
   "Send invitation": "Verstuur uitnodiging",
   "Send test": "Test verzenden",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "De gebruiker is bijgewerkt",
   "The vault has been created": "De kluis is gemaakt",
   "The vault has been deleted": "De kluis is verwijderd",
-  "The vault have been updated": "De kluis is bijgewerkt",
+  "The vault has been updated": "De kluis is bijgewerkt",
   "they/them": "zij/hen",
   "This address is not active anymore": "Dit adres is niet meer actief",
   "This device": "Dit apparaat",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "U bent uitgenodigd om dit e-mailadres te gebruiken in Monica, een open source persoonlijk CRM, zodat we het kunnen gebruiken om u meldingen te sturen.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️Gevarenzone",
+  "❔ Other": "❔ Andere",
   "🌳 Chalet": "🌳Chalet",
   "🏠 Secondary residence": "🏠 Tweede verblijfplaats",
   "🏡 Home": "🏡Thuis",
