--- a/lang/pl.json
+++ b/lang/pl.json
@@ -390,6 +390,7 @@
   "Edit a contact": "Edytuj kontakt",
   "Edit a journal": "Edytuj dziennik",
   "Edit a post": "Edytuj post",
+  "Edit a vault": "Edytuj sklepienie",
   "edited a note": "edytował notatkę",
   "Edit group": "Edytuj grupę",
   "Edit journal": "Edytuj dziennik",
@@ -578,8 +579,8 @@
   "Log in": "Zaloguj się",
   "Login": "Logowanie",
   "Login with:": "Zaloguj się z:",
-  "Logout": "Wyloguj",
   "Log Out": "Wyloguj się",
+  "Logout": "Wyloguj",
   "Log Out Other Browser Sessions": "Wyloguj inne sesje przeglądarki",
   "Longest streak": "Najdłuższa passa",
   "Love": "Miłość",
@@ -820,6 +821,7 @@
   "Security keys": "Klucze bezpieczeństwa",
   "Select a group or create a new one": "Wybierz grupę lub utwórz nową",
   "Select A New Photo": "Wybierz Nowe Zdjęcie",
+  "Select a page": "Wybierz stronę",
   "Select a relationship type": "Wybierz typ relacji",
   "Send invitation": "Wyślij zaproszenie",
   "Send test": "Wyślij test",
@@ -1068,7 +1070,7 @@
   "The user has been updated": "Użytkownik został zaktualizowany",
   "The vault has been created": "Skarbiec został utworzony",
   "The vault has been deleted": "Skarbiec został usunięty",
-  "The vault have been updated": "Skarbiec został zaktualizowany",
+  "The vault has been updated": "Sklepienie zostało zaktualizowane",
   "they/them": "oni/oni",
   "This address is not active anymore": "Adres ten nie jest już aktywny",
   "This device": "To urządzenie",
@@ -1270,6 +1272,7 @@
   "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Zostałeś zaproszony do korzystania z tego adresu e-mail w Monica, osobistym systemie CRM typu open source, abyśmy mogli go używać do wysyłania Ci powiadomień.",
   "ze/hir": "ze/hir",
   "⚠️ Danger zone": "⚠️ Strefa zagrożenia",
+  "❔ Other": "❔ Inne",
   "🌳 Chalet": "🌳 Chata",
   "🏠 Secondary residence": "🏠 Drugie miejsce zamieszkania",
   "🏡 Home": "🏡 Dom",
