feat: Disable Signups for new users (#7254)
Co-authored-by: Alexis Saettler <alexis@saettler.org>

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -773,6 +773,7 @@
   "Register": "تسجيل",
   "Register a new key": "تسجيل مفتاح جديد",
   "Register a new key.": "تسجيل مفتاح جديد.",
+  "Registration is currently disabled": "التسجيل معاق حاليا",
   "Regular post": "البريد العادي",
   "Regular user": "المستخدم العادي",
   "Relationships": "العلاقات",
