--- a/lang/ca.json
+++ b/lang/ca.json
@@ -773,6 +773,7 @@
   "Register": "Registre",
   "Register a new key": "Registreu una clau nova",
   "Register a new key.": "Registreu una clau nova.",
+  "Registration is currently disabled": "Actualment, el registre està desactivat",
   "Regular post": "Publicació habitual",
   "Regular user": "Usuari habitual",
   "Relationships": "Relacions",
