--- a/lang/da.json
+++ b/lang/da.json
@@ -773,6 +773,7 @@
   "Register": "Registrér",
   "Register a new key": "Registrer en ny nøgle",
   "Register a new key.": "Registrer en ny nøgle.",
+  "Registration is currently disabled": "Registrering er i øjeblikket deaktiveret",
   "Regular post": "Almindelig post",
   "Regular user": "Almindelig bruger",
   "Relationships": "Relationer",
