--- a/lang/fr.json
+++ b/lang/fr.json
@@ -773,6 +773,7 @@
   "Register": "Inscription",
   "Register a new key": "Enregistrer une nouvelle clé",
   "Register a new key.": "Enregistrer une nouvelle clé.",
+  "Registration is currently disabled": "L’inscription est actuellement désactivée",
   "Regular post": "Poste régulier",
   "Regular user": "Utilisateur régulier",
   "Relationships": "Relations",
