--- a/lang/he.json
+++ b/lang/he.json
@@ -773,6 +773,7 @@
   "Register": "הרשמה",
   "Register a new key": "רשום מפתח חדש",
   "Register a new key.": "רשום מפתח חדש.",
+  "Registration is currently disabled": "ההרשמה מושבתת כרגע",
   "Regular post": "פוסט רגיל",
   "Regular user": "משתמש קבוע",
   "Relationships": "יחסים",
