--- a/lang/hi.json
+++ b/lang/hi.json
@@ -773,6 +773,7 @@
   "Register": "रजिस्टर करें",
   "Register a new key": "एक नई कुंजी पंजीकृत करें",
   "Register a new key.": "एक नई कुंजी पंजीकृत करें.",
+  "Registration is currently disabled": "पंजीकरण वर्तमान में अक्षम है",
   "Regular post": "नियमित पोस्ट",
   "Regular user": "नियमित उपयोगकर्ता",
   "Relationships": "रिश्तों",
