--- a/lang/ja.json
+++ b/lang/ja.json
@@ -773,6 +773,7 @@
   "Register": "アカウント作成",
   "Register a new key": "新しいキーを登録する",
   "Register a new key.": "新しいキーを登録します。",
+  "Registration is currently disabled": "登録は現在無効になっています",
   "Regular post": "定期投稿",
   "Regular user": "一般ユーザー",
   "Relationships": "人間関係",
