--- a/lang/pt.json
+++ b/lang/pt.json
@@ -773,6 +773,7 @@
   "Register": "Registar",
   "Register a new key": "Registre uma nova chave",
   "Register a new key.": "Registre uma nova chave.",
+  "Registration is currently disabled": "Atualmente, o registro está desativado",
   "Regular post": "Postagem regular",
   "Regular user": "Usuário normal",
   "Relationships": "Relacionamentos",
