--- a/lang/ru.json
+++ b/lang/ru.json
@@ -773,6 +773,7 @@
   "Register": "Регистрация",
   "Register a new key": "Зарегистрируйте новый ключ",
   "Register a new key.": "Зарегистрируйте новый ключ.",
+  "Registration is currently disabled": "Регистрация в настоящее время отключена",
   "Regular post": "Обычный пост",
   "Regular user": "Обычный пользователь",
   "Relationships": "Отношения",
