--- a/lang/tr.json
+++ b/lang/tr.json
@@ -773,6 +773,7 @@
   "Register": "Kayıt Ol",
   "Register a new key": "Yeni bir anahtar kaydedin",
   "Register a new key.": "Yeni bir anahtar kaydedin.",
+  "Registration is currently disabled": "Kayıt şu anda devre dışı bırakıldı",
   "Regular post": "Normal gönderi",
   "Regular user": "Düzenli kullanıcı",
   "Relationships": "İlişkiler",
