--- a/lang/ur.json
+++ b/lang/ur.json
@@ -773,6 +773,7 @@
   "Register": "رجسٹر کریں",
   "Register a new key": "ایک نئی کلید رجسٹر کریں۔",
   "Register a new key.": "ایک نئی کلید رجسٹر کریں۔",
+  "Registration is currently disabled": "رجسٹریشن فی الحال غیر فعال ہے",
   "Regular post": "باقاعدہ پوسٹ",
   "Regular user": "باقاعدہ صارف",
   "Relationships": "رشتے",
